--- a/circle.yml
+++ b/circle.yml
@@ -2,7 +2,7 @@ general:
   branches:
     ignore:
       - gh-pages
-       
+
 test:
   override:
     - exit 0
@@ -11,4 +11,4 @@ deployment:
   staging:
     branch: master
     commands:
-      - ./scripts/deploy_ghpages.sh build
+      - ./scripts/deploy-ghpages.sh build
