--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,14 @@ general:
     ignore:
       - gh-pages
 
+dependencies:
+  pre:
+    - sudo pip install html5validator
+
+test:
+  override:
+    - html5validator
+
 deployment:
   production:
     branch: master
